--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,7 +47,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:16.1.0'
     implementation 'com.google.firebase:firebase-auth:16.2.1'
     implementation 'com.google.android.gms:play-services-auth:16.0.1'
-
+    implementation 'com.google.firebase:firebase-messaging:17.6.0'
+    implementation 'com.google.firebase:firebase-config:16.5.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
